<resources>
    <string name="app_name">Contact_refac</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="이름">이름</string>
    <string name="전화번호">전화번호</string>
    <string name="이메일">이메일</string>
    <string name="이벤트">이벤트</string>
    <string name="취소">취소</string>
    <string name="확인">확인</string>

    <string name="name_1">아이유</string>
    <string name="phonen_num_1">010-1111-1111</string>
    <string name="email_1">iulove@naver.com</string>

</resources>