<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="410dp"
    android:layout_height="730dp"
    android:background="@drawable/dialog_bg"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/dialog_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/dialog_circle"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dialog_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="212dp"
        android:background="@drawable/dialog_edittext"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/dialog_confirm_button"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/dialog_confirmbtn"
        android:text="@string/확인"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="312dp"
        android:text="@string/이메일"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="260dp"
        android:text="@string/전화번호"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dialog_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="312dp"
        android:background="@drawable/dialog_edittext"
        android:ems="10"
        android:gravity="center"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:text="@string/이벤트"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/dialog_cancel_button"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/dialog_cancelbtn"
        android:text="@string/취소"
        android:textColor="#5C0606"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialog_confirm_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="212dp"
        android:text="@string/이름"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dialog_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/dialog_edittext"
        android:ems="10"
        android:gravity="center"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/dialog_offBtn"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/dialog_eventbtn"
        android:text="OFF"
        android:textColor="#5C0606"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dialog_cancel_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.277" />

    <android.widget.Button
        android:id="@+id/dialog_5min"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/dialog_eventbtn"
        android:text="5분 뒤 알림"
        android:textColor="#5C0606"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dialog_confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.278" />

    <android.widget.Button
        android:id="@+id/dialog_10min"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dialog_eventbtn"
        android:text="10분 뒤 알림"
        android:textColor="#5C0606"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dialog_confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_5min" />

    <android.widget.Button
        android:id="@+id/dialog_30min"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dialog_eventbtn"
        android:text="30분 뒤 알림"
        android:textColor="#5C0606"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dialog_cancel_button"
        app:layout_constraintEnd_toStartOf="@+id/dialog_10min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_offBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>